<resources>
    <string name="app_name">Capacitance Calculator</string>

    <string name="unidad_kilometro">Kilómetro</string>
    <string name="unidad_metro">Metro</string>
    <string name="unidad_centimetro">Centímetro</string>
    <string name="unidad_decimetro">Decímetro</string>
    <string name="unidad_milimetro">Milímetro</string>
    <string name="unidad_micrometro">Micrómetro</string>
    <string name="unidad_nanometro">Nanómetro</string>
    <string name="unidad_picometro">Picómetro</string>

    <string name="unidad_kilometro_cuadrado">Kilómetro cuadrado</string>
    <string name="unidad_metro_cuadrado">Metro cuadrado</string>
    <string name="unidad_centimetro_cuadrado">Centímetro cuadrado</string>
    <string name="unidad_decimetro_cuadrado">Decímetro cuadrado</string>
    <string name="unidad_milimetro_cuadrado">Milímetro cuadrado</string>
    <string name="unidad_micrometro_cuadrado">Micrómetro cuadrado</string>
    <string name="unidad_nanometro_cuadrado">Nanómetro cuadrado</string>
    <string name="unidad_picometro_cuadrado">Picómetro cuadrado</string>

    <string name="unidad_faradio">Faradio</string>
    <string name="unidad_milifaradio">Milifaradio</string>
    <string name="unidad_microfaradio">Microfaradio</string>
    <string name="unidad_nanofaradio">Nanofaradio</string>
    <string name="unidad_picofaradio">Picofaradio</string>

    <string name="simbolo_kilometro">km</string>
    <string name="simbolo_metro">m</string>
    <string name="simbolo_centimetro">cm</string>
    <string name="simbolo_decimetro">dm</string>
    <string name="simbolo_milimetro">mm</string>
    <string name="simbolo_micrometro">um</string>
    <string name="simbolo_nanometro">nm</string>
    <string name="simbolo_picometro">pm</string>

    <string name="simbolo_kilometro_cuadrado">km<sup>2</sup></string>
    <string name="simbolo_metro_cuadrado">m<sup>2</sup></string>
    <string name="simbolo_centimetro_cuadrado">cm<sup>2</sup></string>
    <string name="simbolo_decimetro_cuadrado">dm<sup>2</sup></string>
    <string name="simbolo_milimetro_cuadrado">mm<sup>2</sup></string>
    <string name="simbolo_micrometro_cuadrado">um<sup>2</sup></string>
    <string name="simbolo_nanometro_cuadrado">nm<sup>2</sup></string>
    <string name="simbolo_picometro_cuadrado">pm<sup>2</sup></string>

    <string name="simbolo_faradio">F</string>
    <string name="simbolo_milifaradio">mF</string>
    <string name="simbolo_microfaradio">uF</string>
    <string name="simbolo_nanofaradio">nF</string>
    <string name="simbolo_picofaradio">pF</string>

    <string name="dielectrico_vacio">Vacio</string>
    <string name="dielectrico_aceite_mineral">Aceite mineral</string>
    <string name="dielectrico_aceite">Aceite</string>
    <string name="dielectrico_agua_destilada">Agua destilada</string>
    <string name="dielectrico_caucho">Caucho</string>
    <string name="dielectrico_acetona">Acetona</string>
    <string name="dielectrico_aire">Aire</string>
    <string name="dielectrico_papel">Papel</string>
    <string name="dielectrico_papel_parafinado">Papel parafinado</string>
    <string name="dielectrico_parafina">Parafina</string>
    <string name="dielectrico_cuarzo">Cuarzo</string>
    <string name="dielectrico_pvc">PVC</string>
    <string name="dielectrico_baquelita">Baquelita</string>
    <string name="dielectrico_vidrio">Vidrio</string>
    <string name="dielectrico_mica">Mica</string>

    <string name="main_area">Área</string>
    <string name="main_valor">Valor</string>
    <string name="main_unidad">Unidad</string>
    <string name="main_distancia">Distancia</string>
    <string name="main_dielectrico">Dieléctrico</string>
    <string name="main_material">Material</string>
    <string name="main_dialog_choose_area_unit_title">Unidades de área</string>
    <string name="main_dialog_choose_distancia_unit_title">Unidades de longitud</string>
    <string name="main_dialog_choose_dielectrico_title">Dielécticos comunes</string>
    <string name="main_resultado">Esperando solucionar&#8230;</string>
    <string name="main_msg_error_solucion">Error, no pude calcular la capacitancia</string>
    <string name="main_dialog_choose_capacitancia_title">Unidades de capacitancia eléctrica</string>
    <string name="all_required_field">Campo requerido</string>
</resources>
